Fix an issue with systemd being unable to start the core3 service.
The full path to the binary is required.

--- a/rpm/SOURCES/swgemu-server.service
+++ b/rpm/SOURCES/swgemu-server.service
@@ -4,4 +4,4 @@ Description=Star Wars Galaxies server emulator
 [Service]
 User=swgemu
 WorkingDirectory=/opt/swgemu-server/MMOCoreORB/bin/
-ExecStart=core3
+ExecStart=/opt/swgemu-server/MMOCoreORB/bin/core3
